2013-12-08  Richard Sandiford  <rdsandiford@googlemail.com>

	* lib/dg.exp (dg-test): Don't put the expected and actual output
	of a pattern test in the test name; send it to the log instead.

2013-11-01  Steve Ellcey  <sellcey@mips.com>

	* Makefile.am (baseboard_SCRIPTS): Add multi-sim.exp baseboard.
	* Makefile.in: Regenerate.
	* baseboards/multi-sim.exp: New.

2013-10-31  Anton Kolesov  <anton.kolesov@synopsys.com>

	* lib/remote.exp (standard_reboot): Return 1 instead of an empty string.
	(remote_reboot): Add comment explaining return value of this procedure.
	* doc/ref.xml (remote_reboot, standard_reboot): Document procedures.
	* doc/dejagnu.texi: Regenerate.

2013-10-15  Alexander Ivchenko  <alexander.ivchenko@intel.com>

       * baseboards/androideabi.exp (process_multilib_options): Add option.
       * config/adb.exp: Remove hardcoded -static option.
       (adb_load): Add the possibility to change the temp directory. Also
       handle permission potential problems.
       (adb_exec): Do cd to android_tmp_dir first.

2013-10-05  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* baseboards/unix.exp: Add gdb settings to not use hardware
	watchpoints in sparc64 running GNU/Linux.

2013-06-17  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* runtest.exp (libdirs): New global variable.
	(load_lib): Append libdirs to search_and_load_files directories.
	* doc/ref.xml (load_lib): Document global variable libdirs.
	* doc/dejagnu.texi: Regenerate.
	* testsuite/runtest.all/load_lib.exp: New testcase.
	* Makefile.am (TESTSUITE_FILES): Add new testcase.
	* Makefile.in: Regenerate.

2013-06-15  Ben Elliston  <bje@gnu.org>

	* configure.ac: If DEJAGNU is unset, set it to /dev/null.
	* Makefile.am: Export DEJAGNU.
	* configure: Likewise.
	* Makefile.in: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix typos.
	* doc/ref.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>
