@@ -1,3 +1,9 @@
+2014-02-23  Steve Ellcey  <sellcey@mips.com>
+	    Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* config/sim.exp (sim_exec): New.
+	(sim_file): New.
+
 2013-12-08  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* lib/dg.exp (dg-test): Don't put the expected and actual output
